--- a/front/.gitignore
+++ b/front/.gitignore
@@ -1,54 +1,23 @@
-# Created by https://www.gitignore.io/api/sass,node,bower,macos
+.DS_Store
+node_modules
+/dist
 
-# Bower
-bower_components
-.bower-cache
-.bower-registry
-.bower-tmp
 
-# macOS
-*.DS_Store
-.AppleDouble
-.LSOverride
+# local env files
+.env.local
+.env.*.local
 
-# Linux
-*.directory
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
-# Node logs
-logs
-*.log
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# Dependency directories
-/node_modules
-
-# Sass
-.sass-cache/
-*.css.map
-
-# JS Sourcemaps
-*.js.map
-
-# vscode
+# Editor directories and files
+.idea
 .vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
