--- a/front/package.json
+++ b/front/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cab-drive",
+  "name": "vue-bootstrap",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,7 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/vue-fontawesome": "^3.0.1",
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.2",
     "core-js": "^3.8.3",
+    "primeicons": "^6.0.1",
     "primevue": "^3.17.0",
     "vue": "^3.2.13"
   },
@@ -20,7 +27,6 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "node-sass": "^7.0.3",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
     "webpack": "^5.74.0"
