--- a/front/package.json
+++ b/front/package.json
@@ -15,9 +15,10 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.2",
     "core-js": "^3.8.3",
-    "primeicons": "^6.0.1",
+    "moment": "^2.29.4",
     "primevue": "^3.17.0",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-moment": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
