--- a/front/package.json
+++ b/front/package.json
@@ -18,7 +18,8 @@
     "moment": "^2.29.4",
     "primevue": "^3.17.0",
     "vue": "^3.2.13",
-    "vue-moment": "^4.1.0"
+    "vue-moment": "^4.1.0",
+    "vue-sweetalert2": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
